# sensor-fun

./: CMakeLists.txt  a.out  aqi.c  aqi.csv  aqi.h  comms.c  comms.h  data.c  data.h  fsdata.c  io.c  io.h  lwipopts.h  main.c  my_fsdata.c  net.c  net.h  reader.py  sensor.c  sensor.h  servo.c  servo.h  str.h  test.c  test.py  util.h
fs/: index.shtml
scripts/: mkfsdata.pl
